tests/errors/test_unterminated_multiline_string.mob
var broken = """this string never closes
